--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -1,7 +1,7 @@
 <!doctype html>
 <html {% if section %} data-current="{{ section }}"{% endif %} lang="en">
 
-	{% include "components/head.njk" %}
+	{% include "partials/header.njk" %}
 
 	<body>
 
@@ -9,14 +9,14 @@
 			<em>
 				<a href="{{ '/' | url }}">{{ metadata.title }}</a>
 			</em>
-			{% include "components/nav.njk" %}
+			{% include "partials/nav.njk" %}
 		</header>
 
 		<main>
 			{{ layoutContent | safe }}
 		</main>
 
-		{% include "components/footer.njk" %}
+		{% include "partials/footer.njk" %}
 
 	</body>
 
