--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -7,9 +7,9 @@
 
 		<header>
 			<em>
-				<a href="{{ '/' | url }}">{{ metadata.title }}</a>
+				<a href="{{ '/' | url }}"></a>
 			</em>
-			{% include "partials/nav.njk" %}
+			
 		</header>
 
 		<main>
