--- a/_includes/partials/expertise.njk
+++ b/_includes/partials/expertise.njk
@@ -1,5 +1,42 @@
 <section id="{{ section.data.page.fileSlug }}" class="relative flex min-h-full xl:pt-20 bg-sun-500">
-	<div class="wrapper-x wrapper-y">
-		<h1 class="">{{ section.data.title }}</h1>
+	<div class="w-full min-h-full wrapper-x wrapper-y">
+		<h1 class="mb-16 text-sun-900 md:mb-20 xl:mb-24">{{ section.data.title }}</h1>
+		<div class="-mx-5 overflow-hidden rounded-lg shadow lg:flex sm:mx-0" x-data="{ tab: 1 }">
+			<div class="bg-mono-50">
+				<ul class="flex lg:block">
+					{% for service in section.data.services %}
+						<li class="flex items-center justify-center flex-1 rounded-t-lg cursor-pointer lg:justify-start lg:rounded-tr-none lg:rounded-l-lg lg:px-6 lg:py-4" :class="{ 'bg-white': tab === {{ loop.index }} }" @click="tab = {{ loop.index }}">
+							{%set iconUrl = ["/_site", service.icon] | join %}
+							<span class="flex items-center justify-center h-12 lg:rounded-full lg:w-12 lg:h-12 text-mono-400 lg:text-sun-800 lg:bg-sun-500" :class="{ 'text-mono-700': tab === {{ loop.index }} }">{{ iconUrl | svgContents("w-6 lg:w-6 lg: m-auto") | safe }}</span>
+							<span class="hidden ml-4 text-lg lg:block font-display">{{ service.name }}</span>
+						</li>
+					{% endfor %}
+				</ul>
+			</div>
+			<div class="flex-1 copy">
+				{% for service in section.data.services %}
+					<div
+						x-cloak
+						class="overflow-hidden transition-all duration-500 max-h-0"
+						x-ref="slide_{{ loop.index }}"
+						:style="tab == {{ loop.index }} ? 'max-height: ' + $refs.slide_{{ loop.index }}.scrollHeight + 'px' : ''"
+					>
+						<h2 class="mt-6 mb-12 text-center lg:hidden title text-mono-900">{{ service.name }}</h2>
+						<div class="">{{ service.description | markdownToHtml | safe }}</div>
+					</div>
+				{% endfor %}
+			</div>
+		</div>
+		<div class="flex flex-col items-center mt-16 lg:justify-center lg:flex lg:mt-24 lg:flex-row text-sun-900">
+			<span class="mb-8 lg:mb-0 lg:mr-10">Tools we work with</span>
+			{% for tool in section.data.tools %}
+				<span class="mb-8 lg:mb-0 lg:mr-10">
+					{% if tool.url %}<a href="{{ tool.url }}">{% endif %}
+						<img src="{{ tool.logo }}" alt="{{ tool.name }}" class="w-32">
+					{% if tool.url %}</a>{% endif %}
+				</span>
+			{% endfor %}			
+			<span class="">and many more!</span>
+		</div>
 	</div>
 </section>
