--- a/_includes/partials/footer.njk
+++ b/_includes/partials/footer.njk
@@ -1,5 +1,9 @@
 <footer class="flex bg-sun-500">
-	<div class="wrapper-x">
-		Footer
+	<div class="w-full py-5 text-right wrapper-x md:py-6 xl:py-8">
+		<div class="text-sm md:text-base xl:text-lg text-sun-800">
+			<span class=""><a href="/privacy-policy" class="underline">Privacy policy</a></span>
+			<span class="mx-5">·</span>
+			<span class="">Made by <a href="http://remiduval.com" class="underline">Remi Duval</a></span>
+		</div>
 	</div>
 </footer>
