--- a/_includes/partials/intro.njk
+++ b/_includes/partials/intro.njk
@@ -1,11 +1,11 @@
-<section id="{{ section.data.page.fileSlug }}" class="relative z-20 flex min-h-full xl:pt-20 bg-sun-500">
-    <div class="relative flex items-center justify-end w-full min-h-full wrapper-x">
-        {{ section.data.title }}
-        {# <div class="w-740">{{ section.data.logo | svgContents('text-gray-700') | safe }}</div> #}
-        <div class="w-740 max-w-5/6">{{ '/content/uploads/logo.svg' | svgContents('text-gray-700') | safe }}</div>
-        <div class="absolute inset-x-0 bottom-0 mb-3 text-center">
-            <div class="">{{ "/_includes/assets/img/scroll.svg" | svgContents("text-sun-800 w-5 m-auto") | safe }}</div>
-            <div class="mt-2 text-sm xl:text-base text-sun-800 font-display">Scroll down</div>
-        </div>
-    </div>
+<section id="{{ section.data.page.fileSlug }}" class="relative z-20 h-full xl:pt-20 bg-sun-500">
+	<div class="relative flex items-center justify-end h-full wrapper-x wrapper-y">
+		{# <div class="w-740">{{ section.data.logo | svgContents('text-gray-700') | safe }}</div> #}
+		{%set introLogoUrl = "/_site" + section.data.logo %}
+		<div class="w-740 max-w-5/6">{{ introLogoUrl | svgContents('text-gray-700') | safe }}</div>
+		<div class="absolute inset-x-0 bottom-0 mb-3 text-center">
+			<div class="">{{ "/_includes/assets/img/scroll.svg" | svgContents("text-sun-800 w-5 m-auto") | safe }}</div>
+			<div class="mt-2 text-sm xl:text-base text-sun-800 font-display">Scroll down</div>
+		</div>
+	</div>
 </section>
