--- a/_includes/partials/intro.njk
+++ b/_includes/partials/intro.njk
@@ -3,9 +3,9 @@
 		{# <div class="w-740">{{ section.data.logo | svgContents('text-gray-700') | safe }}</div> #}
 		{%set introLogoUrl = "/_site" + section.data.logo %}
 		<div class="w-740 max-w-5/6">{{ introLogoUrl | svgContents('text-gray-700') | safe }}</div>
-		<div class="absolute inset-x-0 bottom-0 mb-3 text-center">
+		<a href="#challenges" class="absolute inset-x-0 bottom-0 mb-3 text-center">
 			<div class="">{{ "/_includes/assets/img/scroll.svg" | svgContents("text-sun-800 w-5 m-auto") | safe }}</div>
 			<div class="mt-2 text-sm xl:text-base text-sun-800 font-display">Scroll down</div>
-		</div>
+		</a>
 	</div>
 </section>
