--- a/_includes/partials/about.njk
+++ b/_includes/partials/about.njk
@@ -9,7 +9,7 @@
 						<div class="">{{ section.data.author.name }}</div>
 						<div class="text-sm leading-tight text-mono-500 lg:text-base">{{ section.data.author.position }}</div>
 					</div>
-					<div class="w-20 h-20 ml-6 overflow-hidden rounded-full"><img src="{{ section.data.author.photo }}" alt="{{ section.data.author.name }}"></div>
+					<div class="w-20 h-20 ml-6 overflow-hidden rounded-full"><img src="{{ section.data.author.photo }}" alt="{{ section.data.author.name }}" loading="lazy"></div>
 				</div>
 			</div>
 		</div>
