--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<link rel="dns-prefetch" href="https://identity.netlify.com">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>{{ title or settings.name }}</title>
+		<title>{{ title or seo.name }}</title>
 		<meta name="description" content="">
 		<script async src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 		{% set css %}
