--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -6,7 +6,7 @@
 		<link rel="dns-prefetch" href="https://identity.netlify.com">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>{{ title or seo.name }}</title>
-		<meta name="description" content="{{ seo.decription }}">
+		<meta name="description" content="{{ seo.description }}">
 		<meta name="theme-color" content="#FFD35D"/>
 		<script async src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 		{% set css %}
