Title in logo svg

--- a/_includes/partials/header.njk
+++ b/_includes/partials/header.njk
@@ -41,6 +41,6 @@
 			</ul>
 		</nav>
 
-		<div class=""><a href="{{ '/' | url }}" class="flex items-center h-20 text-mono-500 hover:text-mono-800">{{ '/content/uploads/logo.svg' | svgContents(" w-48") | safe }}</a></div>
+		<div class=""><a href="{{ '/' | url }}" class="flex items-center h-20 text-mono-500 hover:text-mono-800">{{ settings.logo | svgContents(" w-48") | safe }}</a></div>
 	</div>
 </header>
