Google Tag Manager implementation

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -19,6 +19,8 @@
 			{% include "assets/js/inline.js" %}
 		{% endset %}
 		<link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Open+Sans&display=swap" rel="stylesheet">
+
+		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-565ZMXD');</script>
 	</head>
 
 	<body	class="flex flex-col h-full leading-7 text-mono-700 font-body bg-mono-50 lg:text-lg lg:leading-8"
@@ -41,7 +43,7 @@
 		</main>
 		
 		
-
+		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-565ZMXD" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	</body>
 
 </html>
