--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -2,24 +2,27 @@
 <html {% if section %} data-current="{{ section }}"{% endif %} lang="en" class="h-full">
 
 	<head>
-		<meta charset="utf-8">
-		<link rel="dns-prefetch" href="https://identity.netlify.com">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>{{ title or seo.name }}</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="{{ seo.description }}">
-		<meta name="theme-color" content="#FFD35D"/>
-		<script async src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-		{% set css %}
-			{% include "assets/css/inline.css" %}
-		{% endset %}
-			<link rel="stylesheet" href="/assets/css/style.css?v={% version %}"/>
-		{% block head %}{% endblock %}
-		<script src="/assets/js/alpine.js" async></script>
-		{% set js %}
-			{% include "assets/js/inline.js" %}
-		{% endset %}
+
+		<link rel="dns-prefetch" href="https://identity.netlify.com">
+		<link rel="stylesheet" href="/assets/css/style.css?v={% version %}"/>
 		<link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Open+Sans&display=swap" rel="stylesheet">
 
+		<link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/assets/favicons/favicon-16x16.png">
+		<link rel="manifest" href="/assets/favicons/site.webmanifest">
+		<link rel="mask-icon" href="/assets/favicons/safari-pinned-tab.svg" color="#ffd35d">
+		<link rel="shortcut icon" href="/assets/favicons/favicon.ico">
+		<meta name="msapplication-TileColor" content="#525252">
+		<meta name="msapplication-config" content="/assets/favicons/browserconfig.xml">
+		<meta name="theme-color" content="#ffd35d">
+
+		<script async src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+		<script src="/assets/js/alpine.js" async></script>
 		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-565ZMXD');</script>
 	</head>
 
