--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -7,6 +7,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="{{ seo.description }}">
 
+		<meta property="og:title" content="{{ title or seo.name }}">
+		<meta property="og:description" content="{{ seo.description }}">
+		<meta property="og:image" content="{{ seo.image }}">
+		<meta property="og:url" content="https://moderncollab.co.uk">
+		<meta property="og:site_name" content="ModernCollab.">
+		<meta name="twitter:card" content="summary_large_image">
+		<meta name="twitter:image:alt" content="ModernCollab.">
+
 		<link rel="dns-prefetch" href="https://identity.netlify.com">
 		<link rel="stylesheet" href="/assets/css/style.css?v={% version %}"/>
 		<link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Open+Sans&display=swap" rel="stylesheet">
