Adding honeypot & recaptcha

--- a/_includes/partials/contact.njk
+++ b/_includes/partials/contact.njk
@@ -4,7 +4,9 @@
 		<div class="max-w-4xl mx-auto text-sun-900">{{ section.templateContent | safe }}</div>
 		<div class="max-w-4xl mt-5 -mx-5 overflow-hidden rounded-lg shadow sm:mx-auto md:flex">
 			<div class="copy md:flex-1">
-				<form name="contact" method="POST" netlify>
+				<form name="contact" method="POST" netlify-honeypot="special-field" data-netlify-recaptcha="true" netlify>
+					<label class="hidden">Special field<input name="special-field" /></label>
+
 					<label>
 						<span class="">Email</span>
 						<input type="email" name="email" class="block w-full mt-1 form-input" autocomplete="email" title="The domain portion of the email address is invalid (the portion after the @)." pattern="^([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x22([^\x0d\x22\x5c\x80-\xff]|\x5c[\x00-\x7f])*\x22)(\x2e([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x22([^\x0d\x22\x5c\x80-\xff]|\x5c[\x00-\x7f])*\x22))*\x40([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x5b([^\x0d\x5b-\x5d\x80-\xff]|\x5c[\x00-\x7f])*\x5d)(\x2e([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x5b([^\x0d\x5b-\x5d\x80-\xff]|\x5c[\x00-\x7f])*\x5d))*(\.\w{2,})+$" required>
@@ -14,6 +16,8 @@
 						<span class="">Message</span>
 						<textarea class="block w-full mt-1 form-textarea" rows="3" name="message" id="message" required></textarea>
 					</label>
+
+					<div data-netlify-recaptcha="true"></div>
 
 					<button type="submit" name="submit" class="mt-6 button">
 					 	{% set sendIcon = "/_includes/assets/img/send.svg" %}
