--- a/_includes/partials/contact.njk
+++ b/_includes/partials/contact.njk
@@ -17,7 +17,7 @@
 						<textarea class="block w-full mt-1 form-textarea" rows="3" name="message" id="message" required></textarea>
 					</label>
 
-					<div data-netlify-recaptcha="true"></div>
+					<div data-netlify-recaptcha="true" class="mt-6"></div>
 
 					<button type="submit" name="submit" class="mt-6 button">
 					 	{% set sendIcon = "/_includes/assets/img/send.svg" %}
