--- a/_includes/partials/contact.njk
+++ b/_includes/partials/contact.njk
@@ -1,8 +1,8 @@
-<section id="{{ section.data.page.fileSlug }}" class="relative flex min-h-full xl:pt-20 bg-sun-500">
+<section id="{{ section.data.page.fileSlug }}" class="relative flex min-h-full xl:pt-20 bg-sun-500" data-scroll>
 	<div class="w-full min-h-full wrapper-x wrapper-y">
 		<h1 class="mb-16 text-sun-900 md:mb-20 xl:mb-24">{{ section.data.title }}</h1>
-		<div class="max-w-4xl mx-auto text-sun-900">{{ section.templateContent | safe }}</div>
-		<div class="max-w-4xl mt-5 -mx-5 overflow-hidden rounded-lg shadow sm:mx-auto md:flex">
+		<div class="max-w-4xl mx-auto text-sun-900 scroll-flash" data-scroll>{{ section.templateContent | safe }}</div>
+		<div class="max-w-4xl mt-5 -mx-5 overflow-hidden rounded-lg shadow sm:mx-auto md:flex scroll-up" data-scroll>
 			<div class="copy md:flex-1">
 				<form name="contact" method="POST" netlify-honeypot="special-field" data-netlify-recaptcha="true" netlify>
 					<label class="hidden">Special field<input name="special-field" /></label>
