--- a/_includes/partials/expertise.njk
+++ b/_includes/partials/expertise.njk
@@ -1,7 +1,7 @@
-<section id="{{ section.data.page.fileSlug }}" class="relative flex min-h-full xl:pt-20 bg-sun-500">
+<section id="{{ section.data.page.fileSlug }}" class="relative flex min-h-full xl:pt-20 bg-sun-500" data-scroll>
 	<div class="w-full min-h-full wrapper-x wrapper-y">
-		<h1 class="mb-16 text-sun-900 md:mb-20 xl:mb-24">{{ section.data.title }}</h1>
-		<div class="-mx-5 overflow-hidden rounded-lg shadow lg:flex sm:mx-0" x-data="{ tab: 1 }">
+		<h1 class="mb-16 text-sun-900 md:mb-20 xl:mb-24 scroll-flash" data-scroll>{{ section.data.title }}</h1>
+		<div class="-mx-5 overflow-hidden rounded-lg shadow lg:flex sm:mx-0 scroll-up" x-data="{ tab: 1 }" data-scroll>
 			<div class="bg-mono-50">
 				<ul class="flex lg:block">
 					{% for service in section.data.services %}
