--- a/_includes/partials/footer.njk
+++ b/_includes/partials/footer.njk
@@ -1,9 +1,35 @@
 <footer class="flex bg-sun-500">
 	<div class="w-full py-5 text-right wrapper-x md:py-6 xl:py-8">
 		<div class="text-sm md:text-base xl:text-lg text-sun-800">
-			<span class=""><a href="/privacy-policy" class="underline">Privacy policy</a></span>
+			<span class=""><a href="/privacy-policy">Privacy policy</a></span>
 			<span class="mx-5">·</span>
-			<span class="">Made by <a href="http://remiduval.com" class="underline">Remi Duval</a></span>
+			<span class="">Made by <a href="http://remiduval.com">Remi Duval</a></span>
 		</div>
 	</div>
+
+	{% if settings.cookies %}
+		<div	class="fixed inset-x-0 bottom-0 z-30 flex justify-end"
+				x-cloak
+				x-data="{ cookies: localStorage.getItem('moderncollab_cookies') }"
+				x-init="$watch('cookies', (val) => localStorage.setItem('moderncollab_cookies', val))"
+				x-show="cookies !== '0'"
+				{# :class="{ 'hidden': cookies == 0 }" #}
+				x-transition:enter="transition-transform transition-opacity ease-out duration-300"
+				x-transition:enter-start="opacity-0 transform -translate-y-2"
+				x-transition:enter-end="opacity-100 transform translate-y-0"
+				x-transition:leave="transition ease-in duration-300"
+				x-transition:leave-end="opacity-0 transform translate-y-3"
+		>
+			<div class="flex items-start max-w-lg mx-3 mb-3 rounded-lg shadow bg-mono-50"
+
+			>
+				<div class="px-6 py-4 text-base leading-normal">{{ settings.cookies | markdownToHtml | safe }}</div>
+				<button class="mt-1" @click="cookies = '0'">{{ "/_includes/assets/img/cross.svg" | svgContents("w-12") | safe }}</button>
+			</div>
+		</div>
+
+		{# Delete current cookies #}
+		{# <script>localStorage.removeItem('moderncollab_cookies');</script> #}
+	{% endif %}
+
 </footer>
