--- a/_includes/partials/intro.njk
+++ b/_includes/partials/intro.njk
@@ -1,9 +1,9 @@
-<section id="{{ section.data.page.fileSlug }}" class="relative z-20 h-full xl:pt-20 bg-sun-500">
+<section id="{{ section.data.page.fileSlug }}" class="relative z-20 h-full xl:pt-20 bg-sun-500" data-scroll>
 	<div class="relative flex items-center justify-end h-full wrapper-x wrapper-y">
 		{# <div class="w-740">{{ section.data.logo | svgContents('text-gray-700') | safe }}</div> #}
 		{%set introLogoUrl = "/_site" + section.data.logo %}
-		<div class="w-740 max-w-5/6">{{ introLogoUrl | svgContents('text-gray-700') | safe }}</div>
-		<a href="#challenges" class="absolute inset-x-0 bottom-0 mb-3 text-center">
+		<div class="w-740 max-w-5/6 scroll-flash" data-scroll>{{ introLogoUrl | svgContents('text-gray-700') | safe }}</div>
+		<a href="#challenges" class="absolute inset-x-0 bottom-0 mb-3 text-center delay-1000 scroll-flash" data-scroll>
 			<div class="">{{ "/_includes/assets/img/scroll.svg" | svgContents("text-sun-900 w-5 m-auto") | safe }}</div>
 			<div class="mt-2 text-sm xl:text-base text-sun-900 font-display">Scroll down</div>
 		</a>
