--- a/content/css/tailwind.css
+++ b/content/css/tailwind.css
@@ -4,6 +4,25 @@
 
 [x-cloak] { display: none; }
 
+.scroll-up {
+	@apply relative;
+	bottom: -4rem;
+	transition: cubic-bezier(0.8,0.2,0.2,0.8) 0.5s;
+}
+
+.scroll-flash {
+	opacity: 0.2;
+	transition: cubic-bezier(0.8,0.2,0.2,0.8) 0.5s;
+}
+
+[data-scroll="in"].scroll-up {
+	bottom: 0
+}
+
+[data-scroll="in"].scroll-flash {
+  opacity: 1;
+}
+
 html {
 	scroll-behavior: smooth;
 }
@@ -71,7 +90,7 @@ section {
 
 
 /* Link */
-.copy a {
+.copy a, footer a {
 	@apply underline;
 }
 
@@ -119,6 +138,7 @@ section {
 }
 
 
+/* Image overlay */
 .darken::after {
 	content: "";
 	position: absolute;
@@ -127,6 +147,7 @@ section {
 	background: linear-gradient(rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.8) 72%);
 }
 
+/* Scroll down */
 @keyframes scroll {
 	0%	{ transform: translateY(0); }
 	30%	{ transform: translateY(100px); }
@@ -136,9 +157,10 @@ svg #wheel {
 	animation: scroll ease 2s infinite;
 }
 
-.slider {
-	scroll-snap-type: x mandatory;
-	overflow-x: scroll;
+
+/* Slider */
+.slider . {
+
 }
 .slider > * {
 	scroll-snap-align: center;
