--- a/_includes/partials/footer.njk
+++ b/_includes/partials/footer.njk
@@ -13,17 +13,14 @@
 				x-data="{ cookies: localStorage.getItem('moderncollab_cookies') }"
 				x-init="$watch('cookies', (val) => localStorage.setItem('moderncollab_cookies', val))"
 				x-show="cookies !== '0'"
-				{# :class="{ 'hidden': cookies == 0 }" #}
 				x-transition:enter="transition-transform transition-opacity ease-out duration-300"
 				x-transition:enter-start="opacity-0 transform -translate-y-2"
 				x-transition:enter-end="opacity-100 transform translate-y-0"
 				x-transition:leave="transition ease-in duration-300"
 				x-transition:leave-end="opacity-0 transform translate-y-3"
 		>
-			<div class="flex items-start max-w-lg mx-3 mb-3 rounded-lg shadow bg-mono-50"
-
-			>
-				<div class="px-6 py-4 text-base leading-normal">{{ settings.cookies | markdownToHtml | safe }}</div>
+			<div class="flex items-start max-w-lg mx-3 mb-3 rounded-lg shadow bg-mono-50">
+				<div class="px-6 py-4 text-sm leading-normal md:text-base">{{ settings.cookies | markdownToHtml | safe }}</div>
 				<button class="mt-1" @click="cookies = '0'">{{ "/_includes/assets/img/cross.svg" | svgContents("w-12") | safe }}</button>
 			</div>
 		</div>
