Remove console.log

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -62,8 +62,7 @@
 				onShown: function(element, ctx, scrollingElement) {
 					if (element.tagName == 'SECTION') {
 						currentSection = element.id;
-						console.log(currentSection);
-						//console.log(currentSectionAlpine);
+						//console.log(currentSection);
 					}
 				},
 			});
