--- a/_includes/partials/footer.njk
+++ b/_includes/partials/footer.njk
@@ -8,14 +8,11 @@
 	</div>
 
 	{% if settings.cookies %}
-		<div	class="fixed inset-x-0 bottom-0 z-30 flex justify-end"
+		<div	class="fixed bottom-0 right-0 z-20"
 				x-cloak
 				x-data="{ cookies: localStorage.getItem('moderncollab_cookies') }"
 				x-init="$watch('cookies', (val) => localStorage.setItem('moderncollab_cookies', val))"
 				x-show="cookies !== '0'"
-				x-transition:enter="transition-transform transition-opacity ease-out duration-300"
-				x-transition:enter-start="opacity-0 transform -translate-y-2"
-				x-transition:enter-end="opacity-100 transform translate-y-0"
 				x-transition:leave="transition ease-in duration-300"
 				x-transition:leave-end="opacity-0 transform translate-y-3"
 		>
