--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -31,7 +31,6 @@
 
 		<script async src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 		<script src="/assets/js/alpine.js" async></script>
-		<script src="/assets/js/scrollout.min.js" async></script>
 		{% if settings.gtm %}
 			<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','{{ settings.gtm }}');</script>
 		{% endif %}
@@ -55,6 +54,7 @@
 			<noscript><iframe src="https://www.googletagmanager.com/ns.html?id={{ settings.gtm }}" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		{% endif %}
 		
+		<script src="/assets/js/scrollout.min.js"></script>
 		<script>
 			var currentSection = 'intro';
 			window.onload = ScrollOut({
