No padding top on intro so text is centered

--- a/_includes/partials/intro.njk
+++ b/_includes/partials/intro.njk
@@ -1,4 +1,4 @@
-<section id="{{ section.data.page.fileSlug }}" class="relative z-20 h-full xl:pt-20 bg-sun-500" data-scroll>
+<section id="{{ section.data.page.fileSlug }}" class="relative z-20 h-full bg-sun-500" data-scroll>
 	<div class="relative flex items-center justify-end h-full wrapper-x wrapper-y">
 		{# <div class="w-740">{{ section.data.logo | svgContents('text-gray-700') | safe }}</div> #}
 		{%set introLogoUrl = "/_site" + section.data.logo %}
