--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -30,7 +30,7 @@
 		<meta name="theme-color" content="#ffd35d">
 
 		<script async src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-		<script src="/assets/js/alpine.js" async></script>
+		<script defer src="/assets/js/alpine.min.js"></script>
 		{% if settings.gtm %}
 			<!-- Google Tag Manager -->
 			<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
