Accessible prev/next buttons

--- a/_includes/partials/challenges.njk
+++ b/_includes/partials/challenges.njk
@@ -20,13 +20,15 @@
 			<div class="absolute inset-0 flex items-center justify-between sm:hidden">
 				<button 
 				class="flex items-center justify-center w-12 h-12 -ml-6 transform rotate-90 rounded-full bg-sun-500 text-sun-900 hover:bg-sun-600"
-				x-on:click="current = current === 1 ? {{ challenges.length }} : current - 1">
+				x-on:click="current = current === 1 ? {{ challenges.length }} : current - 1"
+				aria-label="Previous">
 				{{ "/_includes/assets/img/chevron-down.svg" | svgContents() | safe }}
 				</button>
 
 				<button 
 				class="flex items-center justify-center w-12 h-12 -mr-6 transform -rotate-90 rounded-full bg-sun-500 text-sun-900 hover:bg-sun-600"
-				x-on:click="current = current === {{ challenges.length }} ? 1 : current + 1">
+				x-on:click="current = current === {{ challenges.length }} ? 1 : current + 1"
+				aria-label="Next">
 				{{ "/_includes/assets/img/chevron-down.svg" | svgContents() | safe }}
 				</button>   
 			</div>
